# voice-to-text

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  transcript.txt  tts.py
